pkg/crate/libzt/src/libzt.rs

#[test]
fn bindgen_test_layout_zts_timeval() {
    assert_eq!(
        ::std::mem::size_of::<zts_timeval>(),
        16usize,
        concat!("Size of: ", stringify!(zts_timeval))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_timeval>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_timeval))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_timeval>())).tv_sec as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_timeval),
            "::",
            stringify!(tv_sec)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_timeval>())).tv_usec as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_timeval),
            "::",
            stringify!(tv_usec)
        )
    );
}
extern "C" {
    #[doc = " @brief Monitor multiple file descriptors for \"readiness\""]
    #[doc = ""]
    #[doc = " @param nfds Set to the highest numbered file descriptor in any of the given"]
    #[doc = " sets"]
    #[doc = " @param readfds Set of file descriptors to monitor for READ readiness"]
    #[doc = " @param writefds Set of file descriptors to monitor for WRITE readiness"]
    #[doc = " @param exceptfds Set of file descriptors to monitor for exceptional"]
    #[doc = " conditions"]
    #[doc = " @param timeout How long this call should block"]
    #[doc = " @return Number of ready file descriptors on success. `ZTS_ERR_SOCKET`,"]
    #[doc = " `ZTS_ERR_SERVICE` on failure. Sets `zts_errno`"]
    pub fn zts_bsd_select(
        nfds: ::std::os::raw::c_int,
        readfds: *mut zts_fd_set,
        writefds: *mut zts_fd_set,
        exceptfds: *mut zts_fd_set,
        timeout: *mut zts_timeval,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Issue file control commands on a socket"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param cmd Operation to be performed"]
    #[doc = " @param flags Flags"]
    #[doc = " @return"]
    pub fn zts_bsd_fcntl(
        fd: ::std::os::raw::c_int,
        cmd: ::std::os::raw::c_int,
        flags: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
pub type zts_nfds_t = ::std::os::raw::c_uint;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_pollfd {
    pub fd: ::std::os::raw::c_int,
    pub events: ::std::os::raw::c_short,
    pub revents: ::std::os::raw::c_short,
}
#[test]
fn bindgen_test_layout_zts_pollfd() {
    assert_eq!(
        ::std::mem::size_of::<zts_pollfd>(),
        8usize,
        concat!("Size of: ", stringify!(zts_pollfd))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_pollfd>(),
        4usize,
        concat!("Alignment of ", stringify!(zts_pollfd))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_pollfd>())).fd as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_pollfd),
            "::",
            stringify!(fd)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_pollfd>())).events as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_pollfd),
            "::",
            stringify!(events)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_pollfd>())).revents as *const _ as usize },
        6usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_pollfd),
            "::",
            stringify!(revents)
        )
    );
}
extern "C" {
    #[doc = " @brief Wait for some event on a file descriptor."]
    #[doc = ""]
    #[doc = " @param fds Set of file descriptors to monitor"]
    #[doc = " @param nfds Number of elements in the fds array"]
    #[doc = " @param timeout How long this call should block"]
    #[doc = " @return Number of ready file descriptors if successful, `ZTS_ERR_SERVICE` if"]
    #[doc = " the node experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets"]
    #[doc = " `zts_errno`"]
    pub fn zts_bsd_poll(
        fds: *mut zts_pollfd,
        nfds: zts_nfds_t,
        timeout: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Control a device"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param request Selects the control function to be performed"]
    #[doc = " @param argp Additional information"]
    #[doc = " @return `ZTS_ERR_OK` if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_ioctl(
        fd: ::std::os::raw::c_int,
        request: ::std::os::raw::c_ulong,
        argp: *mut ::std::os::raw::c_void,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " @brief Send data to remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data to write"]
    #[doc = " @param flags (e.g. `ZTS_MSG_DONTWAIT`, `ZTS_MSG_MORE`)"]
    #[doc = " @return Number of bytes sent if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_send(
        fd: ::std::os::raw::c_int,
        buf: *const ::std::os::raw::c_void,
        len: size_t,
        flags: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Send data to remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data to write"]
    #[doc = " @param flags Specifies type of message transmission"]
    #[doc = " @param addr Destination address"]
    #[doc = " @param addrlen Length of destination address"]
    #[doc = " @return Number of bytes sent if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_sendto(
        fd: ::std::os::raw::c_int,
        buf: *const ::std::os::raw::c_void,
        len: size_t,
        flags: ::std::os::raw::c_int,
        addr: *const zts_sockaddr,
        addrlen: zts_socklen_t,
    ) -> ssize_t;
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_iovec {
    pub iov_base: *mut ::std::os::raw::c_void,
    pub iov_len: size_t,
}
#[test]
fn bindgen_test_layout_zts_iovec() {
    assert_eq!(
        ::std::mem::size_of::<zts_iovec>(),
        16usize,
        concat!("Size of: ", stringify!(zts_iovec))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_iovec>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_iovec))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_iovec>())).iov_base as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_iovec),
            "::",
            stringify!(iov_base)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_iovec>())).iov_len as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_iovec),
            "::",
            stringify!(iov_len)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct zts_msghdr {
    pub msg_name: *mut ::std::os::raw::c_void,
    pub msg_namelen: zts_socklen_t,
    pub msg_iov: *mut zts_iovec,
    pub msg_iovlen: ::std::os::raw::c_int,
    pub msg_control: *mut ::std::os::raw::c_void,
    pub msg_controllen: zts_socklen_t,
    pub msg_flags: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_zts_msghdr() {
    assert_eq!(
        ::std::mem::size_of::<zts_msghdr>(),
        48usize,
        concat!("Size of: ", stringify!(zts_msghdr))
    );
    assert_eq!(
        ::std::mem::align_of::<zts_msghdr>(),
        8usize,
        concat!("Alignment of ", stringify!(zts_msghdr))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_name as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_name)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_namelen as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_namelen)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_iov as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_iov)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_iovlen as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_iovlen)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_control as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_control)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_controllen as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_controllen)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<zts_msghdr>())).msg_flags as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(zts_msghdr),
            "::",
            stringify!(msg_flags)
        )
    );
}
extern "C" {
    #[doc = " @brief Send message to remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param msg Message to send"]
    #[doc = " @param flags Specifies type of message transmission"]
    #[doc = " @return Number of bytes sent if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_sendmsg(
        fd: ::std::os::raw::c_int,
        msg: *const zts_msghdr,
        flags: ::std::os::raw::c_int,
    ) -> ssize_t;
}
extern "C" {
    #[doc = " @brief Receive data from remote host"]
    #[doc = ""]
    #[doc = " @param fd Socket file descriptor"]
    #[doc = " @param buf Pointer to data buffer"]
    #[doc = " @param len Length of data buffer"]
    #[doc = " @param flags Specifies the type of message receipt"]
    #[doc = " @return Number of bytes received if successful, `ZTS_ERR_SERVICE` if the node"]
    #[doc = "     experiences a problem, `ZTS_ERR_ARG` if invalid argument. Sets `zts_errno`"]
    pub fn zts_bsd_recv(
        fd: ::std::os::raw::c_int,
        buf: *mut ::std::os::raw::c_void,
        len: size_t,
        flags: ::std::os::raw::c_int,
    ) -> ssize_t;
}
